@@ -264,9 +264,9 @@ elseif (hasRequest('action') && getRequest('action') == 'host.massupdate' && has
 		$hosts = API::Host()->get([
 			'output' => ['hostid'],
 			'hostids' => $hostIds,
+			'selectInventory' => ['inventory_mode'],
 			'filter' => ['flags' => [ZBX_FLAG_DISCOVERY_NORMAL, ZBX_FLAG_DISCOVERY_CREATED]]
 		]);
-		$hosts = ['hosts' => $hosts];
 
 		$properties = [
 			'proxy_hostid', 'ipmi_authtype', 'ipmi_privilege', 'ipmi_username', 'ipmi_password', 'description'
@@ -281,13 +281,6 @@ elseif (hasRequest('action') && getRequest('action') == 'host.massupdate' && has
 
 		if (isset($visible['status'])) {
 			$newValues['status'] = getRequest('status', HOST_STATUS_NOT_MONITORED);
-		}
-
-		if (isset($visible['inventory_mode'])) {
-			$newValues['inventory_mode'] = getRequest('inventory_mode', HOST_INVENTORY_DISABLED);
-			$newValues['inventory'] = ($newValues['inventory_mode'] == HOST_INVENTORY_DISABLED)
-				? []
-				: getRequest('host_inventory', []);
 		}
 
 		if (array_key_exists('encryption', $visible)) {
@@ -350,14 +343,14 @@ elseif (hasRequest('action') && getRequest('action') == 'host.massupdate' && has
 			}
 
 			if (isset($replaceHostGroupsIds)) {
-				$hosts['groups'] = API::HostGroup()->get([
+				$newValues['groups'] = API::HostGroup()->get([
 					'groupids' => $replaceHostGroupsIds,
 					'editable' => true,
 					'output' => ['groupid']
 				]);
 			}
 			else {
-				$hosts['groups'] = [];
+				$newValues['groups'] = [];
 			}
 		}
 		elseif ($newHostGroupIds) {
@@ -378,13 +371,39 @@ elseif (hasRequest('action') && getRequest('action') == 'host.massupdate' && has
 				$hostTemplateIds = zbx_objectValues($hostTemplates, 'templateid');
 				$templatesToDelete = array_diff($hostTemplateIds, $templateids);
 
-				$hosts['templates_clear'] = zbx_toObject($templatesToDelete, 'templateid');
+				$newValues['templates_clear'] = zbx_toObject($templatesToDelete, 'templateid');
 			}
 
 			$hosts['templates'] = $templateids;
 		}
 
-		$result = API::Host()->massUpdate(array_merge($hosts, $newValues));
+		$host_inventory = array_intersect_key(getRequest('host_inventory', []), $visible);
+
+		if (hasRequest('inventory_mode') && array_key_exists('inventory_mode', $visible)) {
+			$newValues['inventory_mode'] = getRequest('inventory_mode', HOST_INVENTORY_DISABLED);
+
+			if ($newValues['inventory_mode'] == HOST_INVENTORY_DISABLED) {
+				$host_inventory = [];
+			}
+		}
+
+		foreach ($hosts as &$host) {
+			if (array_key_exists('inventory_mode', $newValues)) {
+				$host['inventory'] = $host_inventory;
+			}
+			elseif (array_key_exists('inventory_mode', $host['inventory'])
+					&& $host['inventory']['inventory_mode'] != HOST_INVENTORY_DISABLED) {
+				$host['inventory'] = $host_inventory;
+			}
+			else {
+				$host['inventory'] = [];
+			}
+			$host = array_merge($host, $newValues);
+		}
+		unset($host);
+
+		$result = (bool) API::Host()->update($hosts);
+
 		if ($result === false) {
 			throw new Exception();
 		}
@@ -400,7 +419,8 @@ elseif (hasRequest('action') && getRequest('action') == 'host.massupdate' && has
 		}
 
 		if ($add) {
-			$add['hosts'] = $hosts['hosts'];
+			$hostsids = zbx_objectValues($hosts, 'hostid');
+			$add['hosts'] = zbx_toObject($hostsids, 'hostid');
 
 			$result = API::Host()->massAdd($add);
 
